Fixed finding of python2 and TCLAP.

--- a/ExpressBindingGenerator/CMakeLists.txt
+++ b/ExpressBindingGenerator/CMakeLists.txt
@@ -29,6 +29,9 @@ find_file(FLEX_EXECUTABLE win_flex.exe HINTS ${CMAKE_CURRENT_SOURCE_DIR}/Tools/w
 
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
+find_package(Python2 REQUIRED)
+
+find_path(TCLAP_INCLUDE_DIR REQUIRED)
 
 get_filename_component(Python2_DIRECTORY ${Python2_EXECUTABLE} DIRECTORY)
 
